--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,13 +1,19 @@
-$font-size-xs: .1rem;
-$font-size-s: .12rem;
-$font-size-m: .14rem;
-$font-size-l: .16rem;
-$font-size-xl: .2rem;
-$font-size-xxl: .3rem;
+$font-size-xs: 0.12rem;
+$font-size-s: 0.14rem;
+$font-size-m: 0.16rem;
+$font-size-l: 0.18rem;
+$font-size-xl: 0.2rem;
+$font-size-xxl: 0.30rem;
 
-$green:#46a3ab;
+$theme-lighter:#e0f2f1;
+$theme-light:#86ccca;
+$theme:#3fa6a5;
+$red:#cc5f76;
+$yellow:#eedb5b;
 $white:#fff;
 $black:#010101;
-$gray:#a2a2a2;
-$red:#a64547;
+$gray-light:#eceff1;
+$gray:#949398;
+$gray-deep:#5a5a5a;
+
 
