--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -1,4 +1,3 @@
-@import "variables.scss";
 
 body,
 html {
@@ -6,27 +5,30 @@ html {
   font-family: -apple-system,Helvetica,sans-serif;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
-  background: $white;
-  color: $black;
+  background: #fff;
+  color: #000;
 }
 
 html{
   font-size:26.666vw;
+  touch-action: manipulation;
 }
 
-@media screen and (min-width: 560px) {
+@media screen and (min-width: 768px) {
   html {
-    font-size: 149px;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  html {
-    font-size: 100px;
+    font-size: 205px;
   }
 }
 
 body{
-  font-size: $font-size-m;
+  font-size: 0.14rem;
+}
+
+li{
+  list-style: none;
+}
+
+input{
+  outline: none;
 }
 
