--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -12,7 +12,7 @@ $red:#cc5f76;
 $yellow:#eedb5b;
 $white:#fff;
 $black:#010101;
-$gray-light:#eceff1;
+$gray-light:#f4f5f7;
 $gray:#949398;
 $gray-deep:#5a5a5a;
 
