--- a/src/assets/style/base.scss
+++ b/src/assets/style/base.scss
@@ -9,12 +9,12 @@ html {
   background: #fff;
   color: #000;
   height: 100%;
+  overflow: hidden;
 }
 
 html{
   font-size:26.666vw;
-  touch-action: none;
-
+  touch-action: manipulation;
 }
 
 @media screen and (min-width: 768px) {
@@ -30,7 +30,6 @@ html{
 }
 
 body{
-  overflow: hidden;
   font-size: 0.14rem;
 }
 
@@ -43,6 +42,8 @@ input{
 }
 
 .container{
+  width: 100%;
+  height: 100%;
   min-width: 320px;
   max-width: 768px;
 }
