排行榜和歌单详情页面完成

--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -40,6 +40,9 @@
 .icon-report:before {
   content: "\e905";
 }
+.icon-folder-plus:before {
+  content: "\e931";
+}
 .icon-search:before {
   content: "\f002";
 }
