搜索建议页面完成

--- a/src/assets/style/icon.scss
+++ b/src/assets/style/icon.scss
@@ -43,6 +43,9 @@
 .icon-folder-plus:before {
   content: "\e931";
 }
+.icon-fire:before {
+  content: "\e9a9";
+}
 .icon-search:before {
   content: "\f002";
 }
@@ -75,6 +78,12 @@
 }
 .icon-heartbeat:before {
   content: "\f21e";
+}
+.icon-triangle-up:before {
+  content: "\e904";
+}
+.icon-triangle-down:before {
+  content: "\e906";
 }
 
 
