--- a/src/assets/style/transition.scss
+++ b/src/assets/style/transition.scss
@@ -32,23 +32,49 @@
   transform: translate3d(0,100%,0);
 }
 
-//
-//.fade-enter-active,
-//.fade-leave-active {
-//  transition: opacity 0.2s;
-//}
-//.fade-enter,
-//.fade-leave-to {
-//  opacity: 0;
-//}
+.slide-enter-active,
+.slide-leave-active{
+  transition: all 0.3s;
+}
 
-//.fade-enter-active {
-//  position: absolute;
-//  top: 0;
-//  right: 0;
-//  bottom: 0;
-//  left: 0;
-//}
+.slide-enter,
+.slide-leave-to{
+  transform: translate3d(-100% , 0 ,0);
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 1s;
+}
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.fade-fast-enter-active,
+.fade-leave-active {
+  transition: opacity 1s;
+}
+.fade-fast-enter,
+.fade-fast-leave-to {
+  opacity: 0;
+}
+
+.fade-fast-enter-active {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
 @keyframes slide-left-in {
   0% {
