--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -8,13 +8,14 @@ $font-size-xxl: 0.30rem;
 $theme-lighter:#e0f2f1;
 $theme-light:#86ccca;
 $theme:#3fa6a5;
-$red:#cc5f76;
+$red:#eb4d44;
 $yellow:#eedb5b;
 $white:#fff;
 $black:#010101;
 $gray-light:#f4f5f7;
 $gray:#949398;
 $gray-deep:#5a5a5a;
+$player-background:#222
 
 
 
